style: add background grid

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-hero {
+  mask-image: radial-gradient(
+    ellipse at top right,
+    black,
+    transparent,
+    transparent,
+    transparent
+  );
+}
